--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-server.port=8080
+server.port=8081
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.username=personal_blog
 spring.datasource.password=personal_blog
 spring.datasource.url=jdbc:mysql://120.79.211.221:3306/personal_blog?useUnicode=true&characterBnCoding=UTF-8
+
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
